tests/invalids/invalidWhile2.gt
proc main ()
    int m;
begin
    while m < n do
        m := n;
end
